Track pseudonymized visitor sessions
